[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://parallax 0.png" type="Texture" id=2]
[ext_resource path="res://PlayerShip.gd" type="Script" id=3]
[ext_resource path="res://parallax 1.png" type="Texture" id=4]
[ext_resource path="res://parallax 2.png" type="Texture" id=5]
[ext_resource path="res://Red_Ship_Space.png" type="Texture" id=6]
[ext_resource path="res://ion.png" type="Texture" id=7]
[ext_resource path="res://ion_bwd.png" type="Texture" id=8]

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.85
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 39.22
initial_velocity_random = 0.01
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="World" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1200, 1200 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1200, 1200 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 600, 600 )
motion_mirroring = Vector2( 1200, 1200 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="PlayerShip" type="Sprite" parent="."]
position = Vector2( 189, 200 )
texture = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Camera" type="Camera2D" parent="PlayerShip"]
current = true

[node name="Thrusters" type="Node2D" parent="PlayerShip"]
z_index = -1

[node name="rcs_right" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( -9, 3 )
emitting = false
amount = 50
lifetime = 0.5
process_material = SubResource( 5 )

[node name="rcs_left" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( 8, 3 )
emitting = false
amount = 50
lifetime = 0.5
process_material = SubResource( 2 )

[node name="rcs_fwd" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( 0, 6 )
emitting = false
amount = 50
lifetime = 0.5
process_material = SubResource( 3 )

[node name="rcs_bwd" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( 0, -6 )
emitting = false
amount = 50
lifetime = 0.5
process_material = SubResource( 4 )

[node name="rcs_ccw1" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( 8, 3 )
emitting = false
amount = 25
lifetime = 0.5
process_material = SubResource( 6 )

[node name="rcs_ccw2" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( -9, 3 )
emitting = false
amount = 25
lifetime = 0.5
process_material = SubResource( 7 )

[node name="rcs_cw1" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( 8, 3 )
emitting = false
amount = 25
lifetime = 0.5
process_material = SubResource( 8 )

[node name="rcs_cw2" type="Particles2D" parent="PlayerShip/Thrusters"]
position = Vector2( -9, 3 )
emitting = false
amount = 25
lifetime = 0.5
process_material = SubResource( 9 )

[node name="ion_fwd" type="Sprite" parent="PlayerShip/Thrusters"]
position = Vector2( 0, 18 )
z_index = 1
texture = ExtResource( 7 )

[node name="ion_bwd" type="Sprite" parent="PlayerShip/Thrusters"]
position = Vector2( 0, -9 )
z_index = 1
texture = ExtResource( 8 )

[node name="cursooor" type="Sprite" parent="."]
texture = ExtResource( 1 )
